@@ -19,6 +19,8 @@ Not released yet.
   (Frank Sachsenheim).
 - New: 'rename_handler'-rule that takes an callable that renames unknown
   fields (Frank Sachsenheim).
+- New: 'Validator.purge_unknown'-property and conditional purging of unknown fields
+  (Frank Sachsenheim).
 
 - Change: The processed root-document of is now available as 'root_document'-
   property of the (child-)Validator (Frank Sachsenheim).
